--- a/style.css
+++ b/style.css
@@ -117,10 +117,16 @@ footer{
     
 }
 .card {
-    margin: 3rem;
+    margin: 1rem;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
   }
+
+  .card img{
+    width: 100%;
+    height: 15vw;
+    object-fit: cover;
+}
   
   
 .card:hover {
