--- a/style.css
+++ b/style.css
@@ -143,7 +143,29 @@ footer{
  .card p{
      text-align: center;
  }
+button{
+  margin: 3rem;
+  padding: 15px 25px;
+  font-size: 24px;
+  text-align: center;
+  cursor: pointer;
+  outline: none;
+  color: #fff;
+  background-color: #4CAF50;
+  border: none;
+  border-radius: 15px;
+  box-shadow: 0 9px #999;
+  cursor: pointer;
+}
 
+button:hover {
+  background-color: rgb(93, 145, 41);
+}
+button:active{
+  background-color: #3e8e41;
+  box-shadow: 0 5px #666;
+  transform:translateY(3px);
+}
   img {
     border-radius: 5px 5px 0 0;
   }
